--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 </head>
 
+<!-- Navigation -->
+
 <body>
     <section id='title'>
         <div class='container-fluid'>
@@ -31,19 +33,20 @@
                 <div class='collapse navbar-collapse' id='navbarSupportedContent'>
                     <ul class='navbar-nav ms-auto'>
                         <li class='nav-item'>
-                            <a class='nav-link' href=''>Contact</a>
+                            <a class='nav-link' href='#footer'>Contact</a>
                         </li>
                         <li class='nav-item'>
-                            <a class='nav-link' href=''>Pricing</a>
+                            <a class='nav-link' href='#pricing'>Pricing</a>
                         </li>
                         <li class='nav-item'>
-                            <a class='nav-link' href=''>Download</a>
+                            <a class='nav-link' href='#cta'>Download</a>
                         </li>
                     </ul>
                 </div>
             </nav>
 
-            <!-- Title -->
+            <!-- Title Banner -->
+
             <div class='row'>
                 <div class='col-lg-6'>
                     <h1>Meet new and interesting dogs nearby.</h1>
@@ -62,6 +65,7 @@
 
 
     <!-- Features -->
+
     <section id="features">
         <div class='row'>
             <div class='feature-box col-lg-4'>
@@ -86,6 +90,7 @@
 
 
     <!-- Testimonials -->
+
     <section id='testimonials'>
         <div id='testimonial-carousel' class='carousel slide' data-bs-ride='false'>
             <div class='carousel-inner'>
@@ -187,19 +192,20 @@
 
     <section id='cta'>
 
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type='button'>Download</button>
-        <button type='button'>Download</button>
-
+        <h3 class='cta-heading'>Find the True Love of Your Dog's Life Today.</h3>
+        <button type='button' class='btn btn-dark btn-lg download-btn'><i class='fab fa-apple'></i> Download</button>
+        <button type='button' class='btn btn-outline-light btn-lg download-btn'><i class='fab fa-google-play'></i> Download</button>
     </section>
 
 
     <!-- Footer -->
 
     <footer id='footer'>
-
-        <p>© Copyright 2018 TinDog</p>
-
+        <i class='social-icon fab fa-twitter fa-2x icon'></i>
+        <i class='social-icon fab fa-instagram fa-2x icon'></i>
+        <i class='social-icon fab fa-facebook fa-2x icon'></i>
+        <i class='social-icon fas fa-envelope fa-2x icon'></i>
+        <p>© Copyright 2021 TinDog</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
