--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Navigation -->
 
 <body>
-    <section id='title'>
+    <section class='red-section' id='title'>
         <div class='container-fluid'>
             <nav class='navbar navbar-expand-lg navbar-dark'>
                 <a class='navbar-brand' href=''>tindog</a>
@@ -49,7 +49,7 @@
 
             <div class='row'>
                 <div class='col-lg-6'>
-                    <h1>Meet new and interesting dogs nearby.</h1>
+                    <h1 class='big-heading'>Meet new and interesting dogs nearby.</h1>
                     <button type='button' class='btn btn-dark btn-lg download-btn'><i class='fab fa-apple'></i> Download</button>
                     <button type='button' class='btn btn-outline-light btn-lg download-btn'><i class='fab fa-google-play'></i> Download</button>
                 </div>
@@ -66,24 +66,26 @@
 
     <!-- Features -->
 
-    <section id="features">
-        <div class='row'>
-            <div class='feature-box col-lg-4'>
-                <i class='fas fa-check-circle fa-4x icon'></i>
-                <h3>Easy to use.</h3>
-                <p>So easy to use, even your dog could do it.</p>
-            </div>
+    <section class='white-section' id="features">
+        <div class='container-fluid'>
+            <div class='row'>
+                <div class='feature-box col-lg-4'>
+                    <i class='fas fa-check-circle fa-4x icon'></i>
+                    <h3 class='feature-title'>Easy to use.</h3>
+                    <p>So easy to use, even your dog could do it.</p>
+                </div>
 
-            <div class='feature-box col-lg-4'>
-                <i class='fas fa-bullseye fa-4x icon'></i>
-                <h3>Elite Clientele</h3>
-                <p>We have all the dogs, the greatest dogs.</p>
-            </div>
+                <div class='feature-box col-lg-4'>
+                    <i class='fas fa-bullseye fa-4x icon'></i>
+                    <h3 class='feature-title'>Elite Clientele</h3>
+                    <p>We have all the dogs, the greatest dogs.</p>
+                </div>
 
-            <div class='feature-box col-lg-4'>
-                <i class='fas fa-heart fa-4x icon'></i>
-                <h3>Guaranteed to work.</h3>
-                <p>Find the love of your dog's life or your money back.</p>
+                <div class='feature-box col-lg-4'>
+                    <i class='fas fa-heart fa-4x icon'></i>
+                    <h3 class='feature-title'>Guaranteed to work.</h3>
+                    <p>Find the love of your dog's life or your money back.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -91,16 +93,16 @@
 
     <!-- Testimonials -->
 
-    <section id='testimonials'>
+    <section class='red-section' id='testimonials'>
         <div id='testimonial-carousel' class='carousel slide' data-bs-ride='false'>
             <div class='carousel-inner'>
-                <div class='carousel-item active'>
-                    <h2>I no longer have to sniff other dogs for love. I've found the cutest Corgi on TinDog. Woof.</h2>
+                <div class='carousel-item active container-fluid'>
+                    <h2 class='testimonial-text'>I no longer have to sniff other dogs for love. I've found the cutest Corgi on TinDog. Woof.</h2>
                     <img class='testimonial-image' src='images/dog-img.jpg' alt='dog-profile'>
                     <em>Pebbles, New York</em>
                 </div>
 
-                <div class='carousel-item'>
+                <div class='carousel-item container-fluid'>
                     <h2 class='testimonial-text'>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
                     <img class='testimonial-image' src='images/lady-img.jpg' alt='lady-profile'>
                     <em>Beverly, Illinois</em>
@@ -128,9 +130,9 @@
 
     <!-- Pricing -->
 
-    <section id='pricing'>
+    <section class='white-section' id='pricing'>
 
-        <h2>A Plan for Every Dog's Needs</h2>
+        <h2 class='section-heading'>A Plan for Every Dog's Needs</h2>
         <p>Simple and affordable price plans for your and your dog.</p>
         
     <div class='row'>
@@ -140,7 +142,7 @@
                 <h3>Chihuahua</h3>
             </div>
             <div class='card-body'>
-                <h2>Free</h2>
+                <h2 class='price-text'>Free</h2>
                 <p>5 Matches Per Day</p>
                 <p>10 Messages Per Day</p>
                 <p>Unlimited App Usage</p>
@@ -156,7 +158,7 @@
                     <h3>Labrador</h3>
                 </div>
                 <div class='card-body'>
-                    <h2>$49 / mo</h2>
+                    <h2 class='price-text'>$49 / mo</h2>
                     <p>Unlimited Matches</p>
                     <p>Unlimited Messages</p>
                     <p>Unlimited App Usage</p>
@@ -172,7 +174,7 @@
                     <h3>Mastiff</h3>
                 </div>
                 <div class='card-body'>
-                    <h2>$99 / mo</h2>
+                    <h2 class='price-text'>$99 / mo</h2>
                     <p>Priority Listing</p>
                     <p>Unlimited Matches</p>
                     <p>Unlimited Messages</p>
@@ -190,22 +192,25 @@
 
     <!-- Call to Action -->
 
-    <section id='cta'>
-
-        <h3 class='cta-heading'>Find the True Love of Your Dog's Life Today.</h3>
-        <button type='button' class='btn btn-dark btn-lg download-btn'><i class='fab fa-apple'></i> Download</button>
-        <button type='button' class='btn btn-outline-light btn-lg download-btn'><i class='fab fa-google-play'></i> Download</button>
+    <section class='red-section' id='cta'>
+        <div class='container-fluid'>
+            <h3 class='big-heading'>Find the True Love of Your Dog's Life Today.</h3>
+            <button type='button' class='btn btn-dark btn-lg download-btn'><i class='fab fa-apple'></i> Download</button>
+            <button type='button' class='btn btn-outline-light btn-lg download-btn'><i class='fab fa-google-play'></i> Download</button>
+        </div>
     </section>
 
 
     <!-- Footer -->
 
-    <footer id='footer'>
-        <i class='social-icon fab fa-twitter fa-2x icon'></i>
-        <i class='social-icon fab fa-instagram fa-2x icon'></i>
-        <i class='social-icon fab fa-facebook fa-2x icon'></i>
-        <i class='social-icon fas fa-envelope fa-2x icon'></i>
-        <p>© Copyright 2021 TinDog</p>
+    <footer class='white-section' id='footer'>
+        <div class='container-fluid'>
+            <i class='social-icon fab fa-twitter'></i>
+            <i class='social-icon fab fa-instagram'></i>
+            <i class='social-icon fab fa-facebook'></i>
+            <i class='social-icon fas fa-envelope'></i>
+            <p>© Copyright 2021 TinDog</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
